performance of model with no annotations

--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -331,7 +331,7 @@ We follow the approach of \cite{milioto2018real} and split the new dataset into 
     \centering
  %   \vspace{-1em}
     \includegraphics[width=\linewidth]{pics/pw_iou_stuttgart_rev.pdf}
-   		\caption{Pixel-wise mean IoU on the Stuttgart dataset.}
+   		\caption{Pixel-wise mean IoU on the Stuttgart dataset. Running the model without any new annotations yields an IoU of $0.34$.}
 		\label{fig:iou_stuttgart}    		
 %    \vspace{1em}
    \end{figure}
@@ -340,7 +340,7 @@ We follow the approach of \cite{milioto2018real} and split the new dataset into 
     \centering
  %   \vspace{-1em}
     \includegraphics[width=\linewidth]{pics/pw_iou_zurich_rev.pdf}
-   		\caption{Pixel-wise mean IoU on the Zurich dataset.}
+   		\caption{Pixel-wise mean IoU on the Zurich dataset. Running the model without any new annotations yields an IoU of $0.36$.}
 		\label{fig:iou_zurich}    		
  %   \vspace{1em}
    \end{figure}
