Framed introduction in broader terms

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -423,6 +423,11 @@ url = {http://www.ipb.uni-bonn.de/pdfs/milioto17uavg.pdf}
   year={2017}
 }
 
-
-
-
+@inproceedings{yosinski:2014,
+title = {How transferable are features in deep neural networks?},
+author = {Yosinski, Jason and Clune, Jeff and Bengio, Yoshua and Lipson, Hod},
+booktitle = {Advances in Neural Information Processing Systems 27},
+editor = {Z. Ghahramani and M. Welling and C. Cortes and N. D. Lawrence and K. Q. Weinberger},
+pages = {3320--3328},
+year = {2014}
+}
