anonymize authors, add categories

--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -10,9 +10,16 @@
 
 \title{Gradient-based Sample Selection for Transfer Learning of\\ Semantic Segmentation: Application in Agricultural Robotics}
 
-\author[Rasha Sheikh et al.]{\parbox{\textwidth}{\centering Rasha Sheikh\thanks{This work has been partly supported by the German Research Foundation under Germany's Excellence Strategy, EXC-2070 - 390732324 (PhenoRob).}, Philipp Lottes, Andres Milioto, Cyrill Stachniss, Maren Bennewitz, Thomas Schultz}
+%\author[Rasha Sheikh et al.]{\parbox{\textwidth}{\centering Rasha Sheikh\thanks{This work has been partly supported by the German Research Foundation under Germany's Excellence Strategy, EXC-2070 - 390732324 (PhenoRob).}, Philipp Lottes, Andres Milioto, Cyrill Stachniss, Maren Bennewitz, Thomas Schultz}
+%\\
+%{\parbox{\textwidth}{\centering  University of Bonn, Germany}
+%}
+%}
+
+
+\author[Submission ID]{\parbox{\textwidth}{\centering Submission ID\thanks{Acknowledgement}}
 \\
-{\parbox{\textwidth}{\centering  University of Bonn, Germany}
+{\parbox{\textwidth}{\centering  Submission ID}
 }
 }
 
@@ -41,6 +48,29 @@ robotics domain and show that we achieve a higher accuracy with a  smaller
 number of samples compared to randomly selecting samples for annotation as well as
 uncertainty-based  approaches to select examples for annotation. Thus, our
 approach reduces the required human labeling  effort.
+
+
+\begin{CCSXML}
+<ccs2012>
+<concept>
+<concept_id>10010147.10010178.10010224.10010245.10010247</concept_id>
+<concept_desc>Computing methodologies~Image segmentation</concept_desc>
+<concept_significance>300</concept_significance>
+</concept>
+<concept>
+<concept_id>10010405.10010476.10010480</concept_id>
+<concept_desc>Applied computing~Agriculture</concept_desc>
+<concept_significance>300</concept_significance>
+</concept>
+</ccs2012>
+\end{CCSXML}
+
+\ccsdesc[300]{Computing methodologies~Image segmentation}
+\ccsdesc[300]{Applied computing~Agriculture}
+
+
+
+\printccsdesc  
 
 \end{abstract} 
 
